tests/NormalTests/paczka1/fuzzy1/63309426.err
Error in line 6: LtdNJUY A996 62,5
Error in line 9: LtdNJUY S784 17,8
Error in line 13: LtdNJUY A405 73,8
Error in line 18: nm1uEjS A140 86,5
Error in line 35: LtdNJUY A140 65,76
